--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 	<h1>Boy Bands and Vegatables</h1>
 	<h2>The Static Web Exercise</h2>
 
-	<div id="boy-bands">
-	</div>
+	<div id="flexBox">
+		<div id="boy-bands">
+		</div>
 
-	<div id="vegetables">
+		<div id="vegetables">
+		</div>
 	</div>
 
 	<script type="text/javascript" src="main.js"></script>
